--- a/BIOSCI544_GrowthLaws+DynamicalSystems.ipynb
+++ b/BIOSCI544_GrowthLaws+DynamicalSystems.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/cohmathonc/BIOSCI544/blob/master/BIOSCI544_GrowthLaws%2BDynamicalSystems.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cohmathonc/BIOSCI544/blob/master/BIOSCI544_GrowthLaws%2BDynamicalSystems.ipynb)"
       ]
     },
     {
