--- a/BIOSCI544_moranProcess.ipynb
+++ b/BIOSCI544_moranProcess.ipynb
@@ -569,7 +569,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/cohmathonc/BIOSCI544/blob/master/BIOSCI544_moranProcess.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/cohmathonc/BIOSCI544/blob/master/BIOSCI544_moranProcess.ipynb)"
       ]
     },
     {
