open colab link in new tab

--- a/BIOSCI544_CancerTreatmentModels.ipynb
+++ b/BIOSCI544_CancerTreatmentModels.ipynb
@@ -53,7 +53,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cohmathonc/BIOSCI544/blob/master/BIOSCI544_CancerTreatmentModels.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cohmathonc/BIOSCI544/blob/master/BIOSCI544_CancerTreatmentModels.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
