--- a/BIOSCI544_moranProcess.ipynb
+++ b/BIOSCI544_moranProcess.ipynb
@@ -622,7 +622,7 @@
         "  y=r*np.cos(t)+y0 \n",
         "  ax.fill(x,y,color=c) \n",
         "def iniPicture(N): \n",
-        "  nr=np.ceil(np.sqrt(N/0.5))+1 \n",
+        "  nr=int(np.ceil(np.sqrt(N/0.5))+1) \n",
         "  rs=np.linspace(1,nr+1,nr)[:-1] \n",
         "  ts=np.linspace(0,2*np.pi,2*nr)[:-1]\n",
         "  pos=np.array(list(itertools.product(rs,ts)))\n",
